syntax = "proto3";

package Micro.Future.Message;

message ModelParams
{
	string modelName = 1;
	map<string, double> scalaParams = 2;

	message double_vector
	{ repeated double entry = 1;}
	map<string, double_vector> vectorParams = 5;
}